# munichat

./: .env.example  .gitattributes  .gitignore  .prettierignore  README.md  README.pt-br.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml  desktop-build.yml  release-desktop.yml  release-images.yml
apps/api/: Dockerfile  package.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts
apps/desktop/: index.html  package.json  tsconfig.node.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/enterprise-installer/: eslint.config.mjs  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/enterprise-installer/src-tauri/: Cargo.toml  tauri.conf.json
apps/enterprise-installer/src-tauri/capabilities/: default.json
apps/enterprise-installer/src-tauri/src/: lib.rs  main.rs
apps/web/: Dockerfile  docker-entrypoint.sh  eslint.config.mjs  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docker/: docker-compose.edge.yml  docker-compose.images.yml  docker-compose.yml
docker/caddy/: Caddyfile
docker/ldap/: bootstrap.ldif
docs/: architecture.md  deploy-edge.md  deploy.md  desktop-apps.md  estrutura-do-codigo.md  ideias-futuras.md  prompt-fase-6.md
k8s/: README.md  api-deployment.yaml  api-hpa.yaml  api-migrate-job.yaml  api-service.yaml  configmap.yaml  ingress.yaml  namespace.yaml  secret.example.yaml  web-deployment.yaml  web-service.yaml
(+199 files in other folders)
