[package]
name = "elyzian-desktop"
version = "0.1.0"
description = "Elyzian Desktop — native client for the Elyzian chat platform"
authors = ["Prefeitura Municipal de Nova Serrana"]
edition = "2021"

[lib]
name = "elyzian_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
