[package]
name = "elyzian-enterprise-installer"
version = "0.1.0"
description = "Elyzian Enterprise Installer — configures and deploys the Elyzian stack"
authors = ["Prefeitura Municipal de Nova Serrana"]
edition = "2021"

[lib]
name = "elyzian_enterprise_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["tls"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
